# chatwalaau

./: .dockerignore  .editorconfig  .gitignore  LICENSE.md  README.md
backend/: .env.sample  commands.default.jsonc  mcp_servers.default.jsonc  pyproject.toml  ruff.toml
backend/scripts/: build_demo_assets.py
backend/src/app/: azure_credential.py  cli.py  main.py  models_catalog.py
backend/src/app/agent/: __init__.py  agent_memory.py  approval.py  approval_iteration.py  compaction.py  identity.py  prompt_dump.py  router.py  temporary.py  tool_surface.py  user_memory.py
backend/src/app/agent/declarative/: __init__.py  authoring.py  loader.py  mapping.py  router.py  spec.py  store.py  tool_ids.py  tool_inventory.py
backend/src/app/agui/: agent_factory.py  agent_registry.py  endpoint.py
backend/src/app/auth/: __init__.py  password.py  session_store.py  web_auth.py
backend/src/app/background/: __init__.py  memory_curate.py  session_title.py  user_memory_extract.py
backend/src/app/cli/: __init__.py  chat.py  client.py  env_tools.py  hash_password.py  main.py  models.py  tts.py
backend/src/app/coding/: tools.py
backend/src/app/commands/: __init__.py  inventory.py  registry.py  router.py
backend/src/app/core/: config.py  env_template.py  version.py
backend/src/app/cron/: __init__.py  engine.py  executor.py  lock.py  managed.py  models.py  router.py  schedule.py  store.py  tool.py
backend/src/app/demo/: __init__.py  bootstrap.py  chat_client.py  embedder.py  image_gen.py  scenarios.py  stt.py  tts.py
backend/src/app/image_gen/: router.py  tools.py
backend/src/app/mcp/: config.py  lifecycle.py  overrides.py  router.py
backend/src/app/mcp_batch/: server.py
backend/src/app/mcp_batch/jobs/: __init__.py  rag_ingest.py
backend/src/app/mcp_batch/rag/: embedder.py
backend/src/app/memory/: __init__.py  editor.py  router.py
backend/src/app/model_offerings/: __init__.py  router.py
backend/src/app/notifications/: __init__.py
backend/src/app/ontology/: __init__.py  nl.py  router.py  store.py  tool.py  vocabulary.py
backend/src/app/openai_api/: models.py  router.py  session.py
backend/src/app/paint/: __init__.py  router.py
backend/src/app/pipeline/: __init__.py  engine.py  models.py  registry.py  router.py  store.py  tool.py
backend/src/app/pipeline/jobs/: __init__.py  rag_ingest.py
backend/src/app/pipeline/rag/: __init__.py  embedder.py
backend/src/app/prompt_templates/: models.py  storage.py
backend/src/app/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  foundry.py  openai.py  structured.py
backend/src/app/rag/: tools.py
backend/src/app/session/: bundle.py  index_store.py  provider.py  router.py  storage.py
backend/src/app/skills/: inventory.py  loaded.py  overrides.py  provider.py  router.py
backend/src/app/stt/: audio_decode.py  factory.py  realtime.py
backend/src/app/teams/: __init__.py  adapter.py  agent_run.py  approval.py  authz.py  message.py  normalize.py  outbound.py  pipeline.py  reply.py  router.py  session.py  store.py
backend/src/app/tts/: audio_encode.py  factory.py  realtime.py
backend/src/app/upload/: router.py
backend/src/app/webhook/: __init__.py  dedicated.py  ingress.py  registry.py  router.py  store.py  tool.py
backend/src/app/webhook/msgraph/: __init__.py  adapter.py  graph_client.py  graph_delegated_client.py  meeting_pipeline.py  subscriptions.py
backend/src/app/workflow/: __init__.py  authoring.py  builder.py  loader.py  router.py  runtime.py  spec.py
backend/src/app/workspace/: __init__.py  explorer.py  router.py
frontend/: biome.jsonc  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutDialog.tsx  AuthGuard.tsx  AuthedImage.tsx  BackgroundResponsesToggle.tsx  BootGate.tsx  ChatInput.tsx  ChatMessageItem.tsx  ChatPanel.tsx  CodeBlock.tsx  CronManager.tsx  DeclarativeAgentEditor.tsx  DeclarativeAgentManager.tsx  DeclarativeWorkflowEditor.tsx  FileExplorer.tsx  HelpPortal.tsx  ImageGenerationResult.tsx  ImageOutputOptions.tsx  ImageThumbnails.tsx  MarkdownRenderer.tsx  MaskEditorDialog.tsx  McpToolManager.tsx  MemoryManager.tsx  MessageNavigator.tsx  MessageStepButton.tsx  ModelOptionsSelector.tsx  ModelSelector.tsx  ModelSettingsManager.tsx  OntologyManager.tsx  PaintEditor.tsx  PermissionsDisabledBanner.tsx  PipelineManager.tsx  ReasoningSelector.tsx  ReauthDialog.tsx  ScrollToBottomButton.tsx  SessionSearchDialog.tsx  SessionSidebar.tsx  SkillsManager.tsx  StructuredOutputControl.tsx  TemporaryChatToggle.tsx  ToolApprovalCard.tsx  (+4 more)
frontend/src/components/file-explorer/: ImageViewer.tsx  PdfViewer.tsx
frontend/src/components/markdown/: remarkCjkStrongEmphasisRescue.test.ts  remarkCjkStrongEmphasisRescue.ts
frontend/src/components/mcp-apps/: McpAppView.tsx
frontend/src/components/templates/: PromptTemplatesModal.tsx  SaveAsTemplateDialog.tsx  TemplateForm.tsx
frontend/src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  skeleton.tsx
frontend/src/hooks/: useAgentAuthoring.ts  useAuth.ts  useAuthedBlobUrl.ts  useChat.ts  useChatScroll.ts  useCronAvailable.ts  useFileExplorerAvailable.ts  useImageAttachment.ts  useMemoryCuration.ts  useMessageNavigator.ts  useMessageStepNav.ts  useOntologyAvailable.ts  usePipelineAvailable.ts  useSession.ts  useTTS.ts  useTemplates.ts  useTemporaryChat.ts  useToolApproval.ts  useWebhookAvailable.ts  useWorkflowAuthoring.ts
frontend/src/lib/: auth-fetch.ts  datetime.ts  lazy-with-reload.ts  monaco-setup.ts  pdf-setup.ts  runTarget.ts  slashCommands.ts  uploads.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  PopupPage.tsx  SidebarPage.tsx
frontend/src/types/: chat.ts
