[project]
name = "chatwalaau"
version = "0.105.0"
description = "ChatWalaʻau -- The localhost AI Agent. Named in Hawaiian, built in Hawaiʻi."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Jingun Jung" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    # Microsoft Agent Framework family: EXACT pins (PRP-0108, UDR-0086 D1).
    # MAF ships breaking changes inside minor releases (1.8.0 async Skill lookup,
    # 1.9.0 MCP sampling guardrails, 1.10.0 SkillsProvider approval-by-default);
    # a version bump is a deliberate, PRP-reviewed act, never a routine refresh.
    "agent-framework==1.10.0",
    "agent-framework-ag-ui==1.0.0rc7",
    "agent-framework-devui==1.0.0b260630",
    # Anthropic (Claude) base-model provider, Direct + Foundry hostings
    # (PRP-0069, UDR-0045 D8). Already resolved transitively via
    # agent-framework-core[all]; declared explicitly to guarantee the capability.
    "agent-framework-anthropic==1.0.0b260630",
    # Microsoft Foundry base-model provider (PRP-0106, UDR-0085 D1): the stable
    # FoundryChatClient connector (OpenAI Responses API via a Foundry project
    # endpoint, Entra ID credential only). Already resolved transitively via the
    # agent-framework meta package; declared explicitly to guarantee the capability.
    "agent-framework-foundry==1.10.0",
    # Declarative agents (PRP-0094, FEAT-0051, UDR-0072): the MAF AgentFactory front
    # end (create_agent_from_yaml / create_agent_from_yaml_path) used to PARSE and
    # VALIDATE declarative agent YAML. The runtime agent is built by ChatWalaʻau
    # (UDR-0072 D2), so the package is used for schema validation only; the loader
    # degrades gracefully to its own structural checks if it is unavailable.
    "agent-framework-declarative==1.0.0rc2",
    "azure-identity>=1.23.0",
    "httpx>=0.28.0",
    "elevenlabs>=2.39.0",
    "chromadb>=1.0.0",
    "pymupdf>=1.25.0",
    "httpx-sse>=0.4.0",
    # Azure OpenAI Realtime API STT (gpt-realtime-whisper) needs a
    # webm/Opus -> PCM16 decoder (PyAV) and a WebSocket client.
    # Default dependencies per PRP-0061 amendment (UDR-0036 D4 revised).
    "av>=12.0",
    "websockets>=13.0",
    # Cron Scheduler: 5+ field crontab expression interpreter (PRP-0089, UDR-0067 D1).
    "croniter>=2.0.0,<3",
    # IANA timezone database so CRON_TIMEZONE named zones work on hosts without a
    # system zoneinfo (Windows). Data-only; code degrades to local tz if absent.
    "tzdata>=2024.1",
    # Microsoft Teams integration (PRP-0092, FEAT-0050, UDR-0070). The Microsoft
    # Teams SDK for Python (Teams AI Library v2). Installed by DEFAULT (operator
    # decision); it transitively pulls microsoft-teams-api / -cards / -common, so
    # only the top-level package is declared (-botbuilder is not used). The SDK is
    # still IMPORTED only when TEAMS_ENABLED (lazy, UDR-0070 D10); the floor is
    # pinned to the Python-3.12-verified release (UDR-0070 D12).
    "microsoft-teams-apps>=2.0.13",
    # Ontology Concept Modeling (PRP-0105, FEAT-0058, UDR-0084 D2): embedded RDF
    # engine (Rust-backed). >= 0.5 ships the RDF 1.2 / SPARQL 1.2 draft features
    # (rdf-12 / sparql-12) enabled by default in the Python bindings; the former
    # RDF-star is subsumed as RDF 1.2 triple terms. Imported lazily inside
    # app.ontology so the feature gate (ONTOLOGY_ENABLED) bounds its blast radius.
    "pyoxigraph>=0.5",
]

[project.optional-dependencies]
# Corporate networks behind TLS-intercepting proxies (Zscaler, Netskope,
# on-prem SSL middlebox) need Python to honour the OS certificate store
# so the in-house root CA is trusted. Opt-in: pip install "chatwalaau[corp]"
# See assets/docs/guides/initial-setup.md (PRP-0054).
corp = ["pip-system-certs>=4.0"]

[project.urls]
Homepage = "https://github.com/motojinc25/chatwalaau"
Repository = "https://github.com/motojinc25/chatwalaau"
Issues = "https://github.com/motojinc25/chatwalaau/issues"

[project.scripts]
chatwalaau = "app.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["_frontend_dist/**/*", "_frontend_dist/*", "templates/.env.template"]

[dependency-groups]
dev = ["ruff>=0.15.5", "pytest>=8.3.0", "pytest-asyncio>=1.0.0", "pyyaml>=6.0"]
